Downgrade java version to version 11.. Fixes #59.